...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.CreateAppointmentFragment"
    android:id="@+id/create_appointment_fragment">

    <EditText
        android:id="@+id/category_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="20dp"
        android:layout_margin="10dp"
...
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        android:text="@string/delete_appointment"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/appointments_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"/>

    <LinearLayout
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/appointment_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="15dp"
            android:singleLine="true"
            android:layout_margin="10dp"
...
                android:textSize="20dp"
                android:text="@string/time"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_appointment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add"
        android:layout_gravity="center"
        android:tint="@color/green"/>

    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
...
