...
            android:layout_marginTop="5dp"
            android:id="@+id/Peer2Learn_image_view"
            android:src="@drawable/peer_to_learn"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image_view"
            android:src="@drawable/profile_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_below="@id/title_bar"/>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
...
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/results_group_recycler_view"
        android:layout_below="@id/add_filter_button"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
...
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/create_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createPublicGroup"
            android:src="@drawable/plus"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/green"
...
