...
    <string name="group_failed">Group creation failed</string>
    <string name="hide">Hide</string>
    <string name="private_group_created">Private group successfully created</string>
    <string name="join">JOIN</string>
    <string name="description_not_available">Description not available</string>
    <string name="group_joined">Group joined successfully</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="group_already_joined">You\'ve already joined this group</string>
    <string name="chat">Chat</string>
    <string name="overview">Overview</string>
    <string name="appointments">Appointments</string>
    <string name="open_group">Open group</string>
    <string name="quit_group">Quit group</string>
    <string name="deleted">Group deleted successfully</string>
    <string name="failed_to_update_admins">Failed to update the new admin of the group</string>
    <string name="quit_successfully">Group left successfully</string>
    <string name="group_initially_created">Group initially created</string>
...
